# linuxband

./: .autotools  .cproject  .gitignore  .project  .pydevproject  CNAME  Makefile.in  README.md  _config.yml  bugs.md  configure.ac  documentation.md  downloads.md  index.md  screenshots.md
_includes/custom/: pages_list  posts_list
_posts/: 2012-02-12-LinuxBand-12.02-Beta-released.md  2012-02-13-LinuxBand-12.02.1-Beta-released.md  2012-02-20-Linuxband-joined-linuxaudio-org.md
assets/sources/: linuxband-12.02.1.tar.gz.md5  linuxband-12.02.1.tar.gz.sha1  linuxband-12.02.tar.gz.md5  linuxband-12.02.tar.gz.sha1
src/main/c/: linuxband-player.c  midi.c  midi.h  remote_control.c  remote_control.h
src/main/config/: default.mma  linuxband.rc.in
src/main/glade/: gui.glade
src/main/python/: linuxband.py.in
src/main/python/linuxband/: __init__.py  config.py  glob.py  logger.py
src/main/python/linuxband/gui/: __init__.py  about_dialog.py  chord_entries.py  chord_sheet.py  common.py  events_bar.py  gui.py  gui_logger.py  preferences.py  save_button_status.py  source_editor.py
src/main/python/linuxband/gui/events/: groove.py  repeat.py  repeat_end.py  repeat_ending.py  tempo.py
src/main/python/linuxband/midi/: midi_player.py  mma2smf.py
src/main/python/linuxband/mma/: __init__.py  bar_chords.py  bar_info.py  chord_table.py  grooves.py  parse.py  song.py  song_data.py
src/main/resources/: linuxband.desktop
src/test/python/linuxband/mma/: test_bar_chords.py  test_parse.py
